# MCP_ML_Data

./: .env.example  .gitignore  consulta_mysql.py  data_generator.py  dataset_crudo.csv  mcp_databricks_pipeline.ipynb  mcp_server.py  mcp_suggestions_plan.md  mcp_utils.py  pyproject.toml
